--- a/ThienNga2/Views/ProductDetail/NewProduct.cshtml
+++ b/ThienNga2/Views/ProductDetail/NewProduct.cshtml
@@ -20,7 +20,7 @@
                     <label>Mã nhà máy @Html.TextBoxFor(Model => Model.producFactoryID)</label>
                     <label>Mã cửa hàng @Html.TextBoxFor(Model => Model.productStoreID)</label>
                     <label>Giá @Html.TextBoxFor(Model => Model.price)</label>
-                    <label>Category @Html.TextBoxFor(Model => Model.tb_cate) </label>
+                    <label>Category @Html.TextBoxFor(Model => Model.cateID) </label>
                 </div>
                 <div class="button-section">
                     <input type="submit" name="Tạo" />
