--- a/ThienNga2/Views/Shared/_Layout.cshtml
+++ b/ThienNga2/Views/Shared/_Layout.cshtml
@@ -14,6 +14,7 @@
         background-color:#022F5A;
         }
     </style>
+    <link href="~/Content/agency.css" rel="stylesheet">
 
 </head>
 <body>
