--- a/ThienNga2/Views/Inventory/XuatKho.cshtml
+++ b/ThienNga2/Views/Inventory/XuatKho.cshtml
@@ -39,7 +39,7 @@
 
         <div id="form" class="form-wrapper">
             <input id="search" class="suggestionsinput" name="code" type="text" placeholder="Nhập mã sản phẩm" required />
-
+            <input id="inventoryid" class="suggestionsinput" name="invID" type="text" placeholder="Chọn kho" required />
             <button type="submit" value="Search" id="submit">Tìm  </button>
         </div>
 
