--- a/ThienNga2/Views/Inventory/NhapKho.cshtml
+++ b/ThienNga2/Views/Inventory/NhapKho.cshtml
@@ -35,10 +35,16 @@
 <body>
     @using (Html.BeginForm("Search2", "Inventory"))
     {
+        SelectList ls = (SelectList)ViewData["invID"] ;
 
 
         <div id="form" class="form-wrapper">
             <input id="search" class="suggestionsinput" name="code" type="text" placeholder="Nhập mã sản phẩm" required />
+            <select id="invID" name="invID">
+                <option value="1">Kho 2</option>
+                <option value="2">Nh&#224;</option>
+                <option value="3">shop</option>
+            </select>
 
             <button type="submit" value="Search" id="submit">Tìm  </button>
         </div>
@@ -46,41 +52,42 @@
 
 
 
-    }
+        }
 
 
-        @if (ViewData["inventoryDetail"] != null )
-    {
-           
-    
-
-    using (Html.BeginForm("addkho", "Inventory"))
-    {
-        inventory t = (inventory)ViewData["inventoryDetail"];
-        
-        @model ThienNga2.Models.ViewModel.InvenotyChangeModel
-        <div class="form-style-10">
-            <form>
-
-                <div class="section"><span></span>Thông tin sản phẩm</div>
-                <div class="inner-wrap">
-                    <div style="display:none"> @Html.TextBoxFor(Model => @Model.inven.id, new { @Value = t.id}) </div>
-                    <div style="display:none"> @Html.TextBoxFor(Model => @Model.inven.productFactoryCode, new { @Value = t.productFactoryCode }) </div>
-                    <label>Số lượng hiện tại : @t.quantity </label>
-                    <label>Nhập thêm:  @Html.TextBoxFor(Model => @Model.newadd)</label>
+        @if (ViewData["inventoryDetail"] != null)
+        {
 
 
+
+            using (Html.BeginForm("addkho", "Inventory"))
+            {
+                inventory t = (inventory)ViewData["inventoryDetail"];
+
+                @model ThienNga2.Models.ViewModel.InvenotyChangeModel
+                <div class="form-style-10">
+                    <form>
+
+                        <div class="section"><span></span>Thông tin sản phẩm</div>
+                        <div class="inner-wrap">
+                            <div style="display:none"> @Html.TextBoxFor(Model => @Model.inven.id, new { @Value = t.id }) </div>
+                            <div style="display:none"> @Html.TextBoxFor(Model => @Model.inven.productFactoryCode, new { @Value = t.productFactoryCode }) </div>
+                            <label>Tên kho : @t.tb_inventory_name.InventoryName </label>
+                            <label>Số lượng hiện tại : @t.quantity </label>
+                            <label>Nhập thêm:  @Html.TextBoxFor(Model => @Model.newadd)</label>
+
+
+                        </div>
+                        <div class="button-section">
+                            <input type="submit" name="Thêm" />
+
+                        </div>
+                    </form>
                 </div>
-                <div class="button-section">
-                    <input type="submit" name="Thêm" />
-
-                </div>
-            </form>
-        </div>
-    }
-}
+            }
+        }
 
 
-   
+
 </body>
 </html>
